--- a/FaceApi.csproj
+++ b/FaceApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AWSSDK.Rekognition" Version="4.0.1.6" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
