--- a/FaceApi.csproj
+++ b/FaceApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Rekognition" Version="4.0.1.6" />
+    <PackageReference Include="AWSSDK.S3" Version="4.0.4.1" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
